<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0EFFD"
    tools:context=".Loguin_Activity">


    <TextView
        android:id="@+id/txt"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="105dp"
        android:text="@string/TXT"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="30dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/Hint_Email_log"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="24"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        tools:ignore="TextContrastCheck"
        android:textColorHint="#CDDC39" />

    <EditText
        android:id="@+id/log_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/Hint_log_sen"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#CDDC39"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_email"
        tools:ignore="TextContrastCheck"
         />

    <CheckBox
        android:id="@+id/checkBox"
        android:onClick="clickCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="159dp"
        android:minHeight="48dp"
        android:text="@string/Check_box"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_senha" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/black"
        android:ems="8"
        android:gravity="center"
        android:text="@string/btnLog"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="81dp"
        android:minHeight="48dp"
        android:text="@string/cadastro"
        android:onClick="cadastrar"
        android:textColor="#CDDC39"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>