<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE7F3"
    tools:context=".Cadastro_Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="170dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="170dp"
        android:text="@string/txt_cadastro"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="30dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/Hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="24"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck"
        android:textColorHint="#CDDC39" />


    <EditText
        android:id="@+id/edt_senha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/Hint_senha"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_cadastro"
        tools:ignore="TextContrastCheck"
        android:textColorHint="#CDDC39" />

    tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_confirm_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/Hint_Confir_sen"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha_cadastro"
        tools:ignore="TextContrastCheck"
        android:textColorHint="#CDDC39" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="150dp"
        android:backgroundTint="@color/purple_700"
        android:ems="9"
        android:gravity="center"
        android:text="@string/button_cadastro"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_senha" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="203dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="204dp"
        android:text="@string/txt_view_cadastro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />
    app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>